plugin/src/test/resources/annotator/perl/unreachableCode/gotoFromInnerMethod.code
sub somesub{
    'before';
    method Exit {
        'inner before';
        goto something;
        '<error descr="Unreachable code">inner after</error>';
    }
    'after';
    method preload {
        goto something;
    }
    'after';
}
